Modify edit buttons in Publisher templates.
* Removed buttons for users not logged in.
* Disable delete button for users without delete permission.

--- a/comicsdb/templates/comicsdb/publisher_detail.html
+++ b/comicsdb/templates/comicsdb/publisher_detail.html
@@ -44,25 +44,21 @@
           </a>
       </div>
       {% if user.is_authenticated %}
-      <p class="level-item">
-        <a class="button is-primary" href="{% url 'publisher:create' %}" title="Add a new publisher">New</a>
-      </p>
-      <p class="level-item">
-        <a class="button is-info" href="{% url 'publisher:update' publisher.slug %}" title="Edit publisher">Edit</a>
-      </p>
-      <p class="level-item">
-        <a class="button is-danger" href="{% url 'publisher:delete' publisher.slug %}" title="Delete publisher">Delete</a>
-      </p>
-      {% else %}
-      <p class="level-item">
-        <a class="button is-primary" title="Add a new publisher" disabled>New</a>
-      </p>
-      <p class="level-item">
-        <a class="button is-primary" title="Edit publisher" disabled>Edit</a>
-      </p>
-      <p class="level-item">
-        <a class="button is-danger" title="Delete publisher"disabled>Delete</a>
-      </p>
+        <p class="level-item">
+          <a class="button is-primary" href="{% url 'publisher:create' %}" title="Add a new publisher">New</a>
+        </p>
+        <p class="level-item">
+          <a class="button is-info" href="{% url 'publisher:update' publisher.slug %}" title="Edit publisher">Edit</a>
+        </p>
+        {% if perms.comicsdb.delete_issue %}
+        <p class="level-item">
+          <a class="button is-danger" href="{% url 'publisher:delete' publisher.slug %}" title="Delete publisher">Delete</a>
+        </p>
+        {% else %}
+        <p class="level-item">
+          <a class="button is-danger" title="Delete publisher" disabled>Delete</a>
+        </p>        
+        {% endif %}
       {% endif %}
     </div>
   </nav>
