Enable user signups.

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -49,7 +49,7 @@
             </div>
           {% else %}
             <div class="navbar-item">
-              <a class="button is-light" href="{% url 'signup' %}" disabled>Sign Up</a>
+              <a class="button is-light" href="{% url 'signup' %}">Sign Up</a>
             </div>
             <div class="navbar-item">
               <a class="button is-light" href="{% url 'login' %}">Log in</a>
