--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -44,8 +44,9 @@
             <br>
             <h1 class="title is-5">Want to join?</h1>
             <h2 class="subtitle is-6">
-              Currently, the site is under heavy construction but I'll be opening up registration and adding some
-              documentation fairly soon. If you have any questions, please <a href="{% url 'contact:email' %}">contact</a> me.
+              Sign-up for an account and read the <a href="{% url 'flatpage:editing-guidelines' %}">Editing Guidelines</a> 
+              before adding information to the database. If you have any questions, please 
+              <a href="{% url 'contact:email' %}">contact</a> me.
             </h2>
           </div>
           <!-- end info box -->
