Add last edited info to detail templates

--- a/comicsdb/templates/comicsdb/character_detail.html
+++ b/comicsdb/templates/comicsdb/character_detail.html
@@ -169,6 +169,8 @@
             </div>
           {% endif %}
         {% endwith %}
+        <br />
+        <p class="has-text-left is-italic is-size-7">Edited on {{ character.modified }}</p>
       </div>
     </div>
     <!-- end misc info -->
