--- a/comicsdb/templates/comicsdb/issue_detail.html
+++ b/comicsdb/templates/comicsdb/issue_detail.html
@@ -270,6 +270,8 @@
             </div>
           {% endif %}
         {% endwith %}
+        <br />
+        <p class="has-text-left is-italic is-size-7">Edited on {{ issue.modified }}</p>
       </div>
     </div>
     <!-- end misc info -->
