--- a/comicsdb/templates/comicsdb/series_detail.html
+++ b/comicsdb/templates/comicsdb/series_detail.html
@@ -114,6 +114,8 @@
         {% if series.issue_count > 0 %}
           <p><b>Number of Issues:</b> {{ series.issue_count }}</p>
         {% endif %}
+        <br />
+        <p class="has-text-left is-italic is-size-7">Edited on {{ series.modified }}</p>
       </div>
     </div>
     <!-- end misc info -->
