--- a/comicsdb/templates/comicsdb/team_detail.html
+++ b/comicsdb/templates/comicsdb/team_detail.html
@@ -160,6 +160,8 @@
             </div>
           {% endif %}
         {% endwith %}
+        <br />
+        <p class="has-text-left is-italic is-size-7">Edited on {{ team.modified }}</p>
       </div>
       <!-- end misc info -->
     </div>
