--- a/comicsdb/templates/comicsdb/arc_detail.html
+++ b/comicsdb/templates/comicsdb/arc_detail.html
@@ -82,11 +82,11 @@
     <!-- arc summary -->
     <div class="column">
       <div class="box">
+        <h1 class="title is-5">Summary</h1>
         {% if arc.desc %}
-          <h1 class="title is-5">Summary</h1>
-          <p>{{ arc.desc|linebreaksbr }}</p>
+        <p>{{ arc.desc|linebreaksbr }}</p>
         {% else %}
-           <h1 class="title is-5">No information available.</h1>
+        <p>No information available.</p>
         {% endif %}
       </div>
       {% with issues=arc.issue_set.all %}
@@ -105,6 +105,16 @@
       {% endwith %}
     </div>
     <!-- end of arc summary -->
+    <!-- misc info -->
+    <div class="column is-one-fifth">
+      <div class="box">
+        <h1 class="title is-6">Story Arc Details</h1>
+        <p><b>Number of Issue:</b> {{ arc.issue_count }}</p>
+        <br />
+        <p class="has-text-left is-italic is-size-7">Edited on {{ arc.modified }}</p>
+      </div>
+    </div>
+    <!-- end misc info -->
   </div>
   <!-- end of main page content -->
 {% endblock %}
