--- a/comicsdb/templates/comicsdb/creator_detail.html
+++ b/comicsdb/templates/comicsdb/creator_detail.html
@@ -141,6 +141,8 @@
           <p><b>Death:</b> {{ creator.death|date:"SHORT_DATE_FORMAT" }}</p>
         {% endif %}
         <p><b>Number of Issue:</b> {{ creator.issue_count }}</p>
+        <br />
+        <p class="has-text-left is-italic is-size-7">Edited on {{ creator.modified }}</p>
       </div>
     </div>
     <!-- end misc info -->
