Update Not Found images in templates.
* Make them webp instead of png.
* Create square image for creators.

--- a/comicsdb/templates/comicsdb/character_list.html
+++ b/comicsdb/templates/comicsdb/character_list.html
@@ -48,7 +48,7 @@
               <img src="{{ im.url }}" alt="{{ character.name }}">
             {% endthumbnail %}
           {% else %}
-            <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ character.name }}">
+            <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ character.name }}">
           {% endif %}
           </figure>
         </a>
