--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -65,7 +65,7 @@
                         <img src="{{ im.url }}" alt = "{{ issue }}">
                       {% endthumbnail %}
                     {% else %}
-                      <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ issue }}">
+                      <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ issue }}">
                     {% endif %}
                   </figure>
                 </a>
@@ -87,7 +87,7 @@
                         <img src="{{ im.url }}" alt = "{{ issue }}">
                       {% endthumbnail %}
                     {% else %}
-                      <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ issue }}">
+                      <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ issue }}">
                     {% endif %}
                   </figure>
                 </a>
@@ -112,7 +112,7 @@
                         <img src="{{ im.url }}" alt = "{{ issue }}">
                       {% endthumbnail %}
                     {% else %}
-                      <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ issue }}">
+                      <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ issue }}">
                     {% endif %}
                   </figure>
                 </a>
