--- a/comicsdb/templates/comicsdb/publisher_detail.html
+++ b/comicsdb/templates/comicsdb/publisher_detail.html
@@ -75,7 +75,7 @@
               <img src="{{ im.url }}" alt = "{{ publisher.name }}">
             {% endthumbnail %}
           {% else %}
-            <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ publisher.name }}">
+            <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ publisher.name }}">
           {% endif %}
         </figure>
       </div>
