--- a/comicsdb/templates/comicsdb/series_detail.html
+++ b/comicsdb/templates/comicsdb/series_detail.html
@@ -78,7 +78,7 @@
                 <img src="{{ im.url }}" alt = "{{ series }}">
               {% endthumbnail %}
             {% else %}
-              <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ series }}">
+              <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ series }}">
             {% endif %}
           {% endwith %}
         </figure>
