--- a/comicsdb/templates/comicsdb/team_detail.html
+++ b/comicsdb/templates/comicsdb/team_detail.html
@@ -72,7 +72,7 @@
               <img src="{{ im.url }}" alt = "{{ team.name }}">
             {% endthumbnail %}
           {% else %}
-            <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ team.name }}">
+            <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ team.name }}">
           {% endif %}
         </figure>
       </div>
