--- a/comicsdb/templates/comicsdb/arc_list.html
+++ b/comicsdb/templates/comicsdb/arc_list.html
@@ -48,7 +48,7 @@
               <img src="{{ im.url }}" alt="{{ arc.name }}">
             {% endthumbnail %}
           {% else %}
-            <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ arc.name }}">
+            <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ arc.name }}">
           {% endif %}
           </figure>
         </a>
