--- a/comicsdb/templates/comicsdb/creator_list.html
+++ b/comicsdb/templates/comicsdb/creator_list.html
@@ -48,7 +48,7 @@
               <img src="{{ im.url }}" alt = "{{ creator.name }}">
             {% endthumbnail %}
           {% else %}
-            <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ creator.name }}">
+            <img src="{% static 'site/img/creator-not-found.webp' %}" alt="No image for {{ creator.name }}">
           {% endif %}
           </figure>
         </a>
