Add issue.id to issue detail template

--- a/comicsdb/templates/comicsdb/issue_detail.html
+++ b/comicsdb/templates/comicsdb/issue_detail.html
@@ -296,6 +296,7 @@
             </div>
           {% endif %}
         {% endwith %}
+        <p><b>Metron ID:</b> {{ issue.id }}</p>
       </div>
     </div>
     <!-- end misc info -->
