--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -33,7 +33,7 @@
               is a community-based site whose goal is to build an open database with a
               <a href="https://en.wikipedia.org/wiki/Representational_state_transfer">REST</a> API for comics.
             </h2>
-            <br>
+            <br />
             <h1 class="title is-5">Why?</h1>
             <h2 class="subtitle is-6">
               Currently the only comic book database the provides a REST API for users is
@@ -41,13 +41,20 @@
               Unfortunately, since it's a corporately-owned service, the community that uses it has no control
               over the amount of resources provided to maintain it or ensure it's continued accessibility.
             </h2>
-            <br>
+            <br />
             <h1 class="title is-5">Want to join?</h1>
             <h2 class="subtitle is-6">
               Sign-up for an account and read the <a href="{% url 'flatpage:editing-guidelines' %}">Editing Guidelines</a> 
               before adding information to the database. If you have any questions, please 
               <a href="{% url 'contact:email' %}">contact</a> me.
             </h2>
+            <br />
+            <h1 class="title is-5">Need to tag your comic archives?</h1>
+            <h2 class="subtitle is-6">
+              If you wish to tag your comic archives with metadata from Metron, head over Github
+              and install <a href="https://github.com/bpepple/metron-tagger">Metron-Tagger</a>. <b>Note:</b>
+              you need an account on Metron to access the REST API.
+            </h2>            
           </div>
           <!-- end info box -->
 
