--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,6 +14,7 @@
       <div id="navMenu" class="navbar-menu">
         <div class="navbar-start">
           <a class="navbar-item" href="{% url 'home' %}">Home</a>
+          <a class="navbar-item" href="{% url 'week:list' %}">New Comics</a>
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">Browse</a>
             <div class="navbar-dropdown">
